alteração style usuario  login e cadastro

--- a/src/app/components/conta/formulario-usuario-login/formulario-usuario-login.component.html
+++ b/src/app/components/conta/formulario-usuario-login/formulario-usuario-login.component.html
@@ -1,5 +1,5 @@
 <article>
-    <img class="img" src="assets\img\Consult-logo.png" alt="logo-deloitte">
+    <img class="img" src="assets\img\udeyou-logo.png" alt="logo-deloitte">
     <form>
 
         <label>
@@ -19,7 +19,7 @@
             <span (click)="esconderSucesso()">x</span>
         </div>
         <div class="controles">
-            <button type="submit" class="salvar" (click)="validarCampos()">Salvar</button>
+            <button type="submit" class="btn" (click)="validarCampos()">Salvar</button>
         </div>
 
         <div class="links">
