--- a/src/app/components/conta/formulario-usuario-login/formulario-usuario-login.component.css
+++ b/src/app/components/conta/formulario-usuario-login/formulario-usuario-login.component.css
@@ -5,7 +5,7 @@ article {
     left: 0;
     height: 100vh;
     width: 100vw;
-    background-color: #151515;
+    background-color: #fff;
     backdrop-filter: blur(6px);
     z-index: 2;
     display: flex;
@@ -14,22 +14,23 @@ article {
     flex-direction: column;
     transition: opacity 3s linear;
 }
+img{
+    max-width: 40vw;
+}
 article form {
-    color: #fff;
+    color: black;
     width: 306px;
 
     display: flex;
     flex-direction: column;
-
-    border: 4px solid #333;
-    background-color: #333;
+    background-color: #fff;
     border-radius: 5px;
     padding: 30px;
-    box-shadow: 0px 5px 10px #000;
+    box-shadow: 0px 0px 10px #999;
 }
 
 article form input{
-    color: #fff;
+    color: #000;
     margin: 5px auto;
     display: block;
     width: 100%;
@@ -37,24 +38,23 @@ article form input{
 
     
     border-radius: 7px;
-    background-color: #888;
+    background-color: #fff;
     border: 2px solid #222;
 }
 
 article form input::placeholder{
     padding: 5px;
-    background-color: #999;
     color: #fff;
 }
 
 article form input:focus{
     outline-style: solid;
-    outline-color: #43B02A;
+    outline-color: #A435F0;
     outline-width: 2px;
     border-radius: 7px;
 
-    border: 1px solid #43B02A;
-    box-shadow: 1px 1px 3px #43B02A;
+    border: 1px solid #A435F0;
+    box-shadow: 1px 1px 3px #A435F0;
 }
 
 article form div {
@@ -74,18 +74,16 @@ article form .controles{
     margin-bottom: 0;
 }
 
-article form .controles .salvar{
-    width: 100%;
-    height: 35px;
-    border: none;
-    border-radius: 5px;
-    background-color: #43B02A;
-    color: #fff;
-    font-weight: 700;
+article form .controles .btn{
+    width: 10vw;
+    border: 1px solid black;
+    color: black;
+    font-weight: 500;
 }
-article form .controles .salvar:hover{
-    background-color: #2c8019;
-    font-weight: 800;
+article form .controles .btn:hover{
+    border: 1px solid #A435F0;
+    background-color: #A435F0;
+    color: #fff;
 }
 
 .links{
@@ -94,15 +92,15 @@ article form .controles .salvar:hover{
     align-items: center;
     flex-direction: column;
     padding-top: 20px;
-    color: #fff;
+    color: #A435F0;
 }
 .link{
     cursor: pointer;
-    font-weight: 400;
+    font-weight: 500;
     margin: 0;
+
 }
 .link:hover{
-    color: #43B02A;
     font-weight: 600;
 }
 
