--- a/src/app/components/conta/formulario-usuario/formulario-usuario.component.html
+++ b/src/app/components/conta/formulario-usuario/formulario-usuario.component.html
@@ -1,5 +1,5 @@
 <article>
-    <img class="img" src="assets\img\Consult-logo.png" alt="logo-deloitte">
+    <img class="img" src="assets\img\udeyou-logo.png" alt="logo-deloitte">
     <form>
         <label>
             Usuario:
@@ -23,7 +23,7 @@
         </div>
         <div class="controles">      
             <p class="link" [routerLink]="['/login']">Voltar</p>
-            <button type="submit" class="salvar" (click)="validarCampos(senha, senhaConfirmada)">Salvar</button>
+            <button type="submit" class="btn" (click)="validarCampos(senha, senhaConfirmada)">Salvar</button>
         </div>
     </form>
 </article>
