--- a/src/app/components/entidades/professores/professores.component.css
+++ b/src/app/components/entidades/professores/professores.component.css
@@ -6,8 +6,22 @@
     color: black;
 }
 
+.card-title{
+    color: black;
+    font-weight: 500;
+    font-size: 20px;
+    cursor: pointer;
+}
+.card-title:hover{
+    color: #A435F0;
+}
+
 img{
-    max-width: 250px;
+    width: 150px;
+    height: 150px;
+    max-width: 150px;
+    max-height: 150px;
+    border-radius: 50%;
 }
 
 .card-body{
