--- a/src/app/components/entidades/professor-details/professor-details.component.css
+++ b/src/app/components/entidades/professor-details/professor-details.component.css
@@ -1,96 +1,41 @@
 .container{
-    margin: 50px auto;
+    margin: 20px auto;
     color: black;
-    justify-content: center;
-    align-items: center;
-    
     display: flex;
     flex-direction: column;
+    gap: 20px;
 }
 
-.sub-container{
+div.card{
+    margin: 20px 0;
+    background-color: #fff;
+    border: none;
+    box-shadow: 0px 0px 2px #999;
+}
+
+div button.btn {
+    width: 10vw;
+
+    border: 1px solid black;
+
+    color: black;
+    font-weight: 500;
+}
+
+div button.btn:hover {
+    border: 1px solid #A435F0;
+    background-color: #A435F0;
+    color: #fff;
+}
+.card-text{
+    height: 10vh;
+}
+
+.cursos{
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 40px;
-}
-
-.controller{
-    display: flex;
-    justify-content: space-between;
-    
     gap: 30px;
+    flex-wrap: wrap;
 }
 
-.button{
-    height: 40px;
-    border-radius: 5px;
-    background-color: #43B02A;
-    border: 3px solid #43B02A;
-    color: #fff;
-    font-size: 15px;
-    font-weight: 700;
-}
-.button:hover{
-    border-radius: 5px;
-    background-color: #2c8019;
-    border: 3px solid #2c8019;
-    color: #fff
-}
-
-.row {
-    display: flex;
-    flex-direction: column;
-    width: 680px;
-    justify-content: center;
-    align-items: center;
-}
-
-.card {
-    margin: 20px;
-    box-shadow: 4px 4px 8px rgb(5, 5, 5);
-    font-family: 'Montserrat';
-    font-size: 20px;
-}
-
-.card-title {
-    font-family: 'Montserrat';
-    font-size: 20px;
-}
-
-.btn{
-    height: 40px;
-    border-radius: 5px;
-    background-color: #43B02A;
-    border: 3px solid #43B02A;
-    color: #fff;
-    font-size: 15px;
-    font-weight: 700;
-}
-
-.btn:hover{
-    border-radius: 5px;
-    background-color: #2c8019;
-    border: 3px solid #2c8019;
-    color: #fff
-}
-
-.div-icons {
-    display: flex;
-    justify-content: flex-end;
-    padding: 20px;
-}
-
-.icon {
-    cursor: pointer;
-}
-
-.icon:hover {
-    color: #43B02A;
-}
-
-.details {
-    font-family: 'Montserrat';
-    font-size: 20px;
-}
