--- a/src/app/components/entidades/professor-details/professor-details.component.html
+++ b/src/app/components/entidades/professor-details/professor-details.component.html
@@ -1,32 +1,22 @@
 <section class="container">
-    <div class="sub-container">
 
-      <ul class="list-group">
-        <li class="list-group-item">{{professor.nome}}</li>
-        <li class="list-group-item">{{professor.sobrenome}}</li>
-        <li class="list-group-item">{{professor.email}}</li>
-      </ul>
-    
-        <div class="servicos">
-            <div class="controller">
-                <button class = "button" (click) = "listarCursosProfessor(professor)">Servicos</button>
-                <!-- <button class = "button" (click) = "enviarCliente(cliente.id)" [routerLink]="['/formulario-servico']">Adicionar Servico</button> -->
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6" *ngFor="let curso of cursosProfessor">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">{{curso.titulo}}</h5>
-                  <p class="card-text">{{curso.descricao}}</p>
-                  <!-- <a href="#" class="btn btn-primary">{{servico.valor}}</a> -->
-                </div>
-                <div class="div-icons">
-                  <!-- <mat-icon class="icon" (click)="deletarServico(servico.id)"> delete</mat-icon>
+  <ul class="list-group">
+    <li class="list-group-item">{{professor.nome}}</li>
+    <li class="list-group-item">{{professor.sobrenome}}</li>
+    <li class="list-group-item">{{professor.email}}</li>
+  </ul>
+  <div class="cursos">
+    <div class="card" style="max-width: 18rem;" *ngFor="let curso of cursosProfessor">
+      <img src="\assets\img\javaImg.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">{{curso.titulo}}</h5>
+        <p class="card-text">{{curso.descricao}}</p>
+        <div class="div-icons">
+          <!-- <mat-icon class="icon" (click)="deletarServico(servico.id)"> delete</mat-icon>
                 <mat-icon class="icon" (click)="enviarIdServico(servico.id)" [routerLink]="['/curso-update-formulario']">edit</mat-icon> -->
-                </div>
-              </div>
-            </div>
-          </div>
+        </div>
+        <button type="button" class="btn">R$ {{curso.valor}}</button>
+      </div>
     </div>
+  </div>
 </section>
