--- a/src/app/components/entidades/main/main.component.html
+++ b/src/app/components/entidades/main/main.component.html
@@ -1,8 +1,100 @@
 <div class="container">
   <div class="banner">
-    <img src="https://staging.ionicframework.com/img/homepage/frameworks-1x.png" alt="">
+    <img class="java-img" src="assets\img\javajpg.jpg" alt="">
   </div>
   <div class="info">
+    <b>Java</b> é uma linguagem de programação orientada a objetos desenvolvida na década de 90 por uma equipe de programadores chefiada por James Gosling, na empresa Sun Microsystems. Em 2008 o Java foi adquirido pela empresa Oracle Corporation
+  </div>
+</div>
 
+<div class="container">
+  <div class="info">
+    <b>Um pouco do que te espera</b>
+  </div>
+  <div class="banner">
+    <img src="assets\img\javacode.png" alt="">
+  </div>
+</div>
+
+<div class="container">
+  <div class="banner">
+    <img src="assets\img\csharp.png" alt="">
+  </div>
+  <div class="info">
+    <b>C#</b> é uma linguagem de programação, multiparadigma, de tipagem forte, desenvolvida pela Microsoft como parte da plataforma .NET. A sua sintaxe orientada a objetos foi baseada no C++ mas inclui muitas influências de outras linguagens de programação, como Object Pascal 
+  </div>
+</div>
+
+<div class="container">
+  <div class="info">
+    <b>Um pouco do que te espera</b>
+  </div>
+  <div class="banner">
+    <img src="assets\img\csharpcode.png" alt="">
+  </div>
+</div>
+
+<div class="container">
+  <div class="banner">
+    <img src="assets\img\learnvue.png" alt="">
+  </div>
+  <div class="info">
+    <b>Vue JS</b> é um framework JavaScript de código-aberto, focado no desenvolvimento de interfaces de usuário e aplicativos de página única
+
+  </div>
+</div>
+
+
+<div class="container">
+  <div class="info">
+    <b>Um pouco do que te espera</b>
+  </div>
+  <div class="banner">
+    <img class="vue-code" src="assets\img\vuecode.png" alt="">
+  </div>
+</div>
+
+<div class="container">
+  <div class="banner">
+    <img src="assets\img\learnangular.png" alt="">
+  </div>
+  <div class="info">
+    <b>Angular</b> é uma plataforma de aplicações web de código-fonte aberto e front-end baseado em TypeScript liderado pela Equipe Angular do Google e por uma comunidade de indivíduos e corporações. Angular é uma reescrita completa do AngularJS, feito pela mesma equipe que o construiu
+  </div>
+</div>
+
+<div class="container">
+  <div class="info">
+    <b>Um pouco do que te espera</b>
+  </div>
+  <div class="banner">
+    <img src="assets\img\angularcodepng.png" alt="">
+  </div>
+</div>
+
+<div class="container">
+  <div class="banner">
+    <img src="assets\img\1200px-Ionic-logo-landscape.svg.png" alt="">
+  </div>
+  <div class="info">
+    <b>Ionic</b> é um SDK de código aberto completo para desenvolvimento de aplicativo móvel híbrido criado por Max Lynch, Ben Sperry e Adam Bradley da Drifty Co. em 2013. A versão original foi lançada em 2013 e construída sobre AngularJS e Apache Cordova
+  </div>
+</div>
+
+<div class="container">
+  <div class="info">
+    <b>Um pouco do que te espera</b>
+  </div>
+  <div class="banner">
+    <img src="assets\img\learnionic.png" alt="">
+  </div>
+</div>
+
+<div class="container">
+  <div class="banner">
+    <img src="assets\img\avr.png" alt="">
+  </div>
+  <div class="info">
+    <b>Aprenda os principais frameworks web da atualidade</b>
   </div>
 </div>
