--- a/src/app/components/entidades/cursos/cursos.component.html
+++ b/src/app/components/entidades/cursos/cursos.component.html
@@ -7,7 +7,7 @@
   </div>
 
     <div class="cursos" *ngFor="let cursoF of cursosFiltrados$ | async">
-      <div class="card" style="max-width: 18rem;" *ngFor="let curso of cursos">
+      <div class="card" style="max-width: 18rem;">
         <img src="\assets\img\javaImg.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">{{cursoF.titulo}}</h5>
