Trazendo os caminhos das imagens armazenados no banco de dados

--- a/src/app/components/entidades/professores/professores.component.html
+++ b/src/app/components/entidades/professores/professores.component.html
@@ -12,7 +12,7 @@
     <div class="row no-gutters" >
 
       <div class="col-md-4">
-        <img src="\assets\img\javaImg.jpg" alt="...">
+        <img src="{{professorF.imagem}}" alt="...">
       </div>
 
       <div class="col-md-8">
@@ -42,7 +42,7 @@
       <div class="row no-gutters" >
   
         <div class="col-md-4">
-          <img src="\assets\img\javaImg.jpg" alt="...">
+          <img src="{{professor.imagem}}" alt="...">
         </div>
   
         <div class="col-md-8">
