--- a/src/app/components/entidades/cursos/cursos.component.html
+++ b/src/app/components/entidades/cursos/cursos.component.html
@@ -8,7 +8,7 @@
 
     <div class="cursos" *ngFor="let cursoF of cursosFiltrados$ | async">
       <div class="card" style="max-width: 18rem;">
-        <img src="\assets\img\javaImg.jpg" class="card-img-top" alt="...">
+        <img src="{{cursoF.imagem}}" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">{{cursoF.titulo}}</h5>
           <p class="card-text">{{cursoF.descricao}}</p>
@@ -19,7 +19,7 @@
 
     <div class="cursos" *ngIf="pesquisando">
       <div class="card" style="max-width: 18rem;" *ngFor="let curso of cursos">
-        <img src="\assets\img\javaImg.jpg" class="card-img-top" alt="...">
+        <img src="{{curso.imagem}}" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">{{curso.titulo}}</h5>
           <p class="card-text">{{curso.descricao}}</p>
