--- a/src/app/components/entidades/professor-details/professor-details.component.html
+++ b/src/app/components/entidades/professor-details/professor-details.component.html
@@ -1,6 +1,6 @@
 <section class="container">
   <div class="profile">
-    <img src="\assets\img\foto-perfil.jpg" class="rounded-circle" alt="...">
+    <img src="{{professor.imagem}}" class="rounded-circle" alt="...">
     <ul class="list-group">
       <a  class="list-group-item list-group-item-action">
         <div class="d-flex w-100 justify-content-between">
@@ -12,7 +12,7 @@
   </div>
   <div class="cursos">
     <div class="card" style="max-width: 18rem;" *ngFor="let curso of cursosProfessor">
-      <img src="\assets\img\javaImg.jpg" class="card-img-top" alt="...">
+      <img src="{{curso.imagem}}" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">{{curso.titulo}}</h5>
         <p class="card-text">{{curso.descricao}}</p>
