--- a/src/app/components/entidades/professor-details/professor-details.component.html
+++ b/src/app/components/entidades/professor-details/professor-details.component.html
@@ -1,12 +1,25 @@
 <section class="container">
   <div class="profile">
-    <img src="{{professor.imagem}}" class="rounded-circle" alt="...">
+    <div class="links">
+      <img src="{{professor.imagem}}" class="rounded-circle" alt="...">
+      
+      <link rel="stylesheet" href="">
+      <button type="button" class="btn" (click)="goToLink('https://twitter.com/')">Twitter</button>
+      <button type="button" class="btn" (click)="goToLink('https://www.facebook.com/')">Facebook</button>
+      <button type="button" class="btn" (click)="goToLink('https://www.linkedin.com/')">Linkedin</button>
+      <button type="button" class="btn" (click)="goToLink('https://www.youtube.com/')">Youtube</button>
+      <button type="button" class="btn" (click)="goToLink('https://www.instagram.com/')">Instagram</button>
+    </div>
     <ul class="list-group">
       <a  class="list-group-item list-group-item-action">
         <div class="d-flex w-100 justify-content-between">
           <h5 class="mb-1">{{professor.nome}} {{professor.sobrenome}}</h5>
+          <p class="mb-1">{{professor.resumo}}</p>
+          <p class="mb-1">{{professor.email}}</p>
         </div>
-        <p class="mb-1">{{professor.email}}</p>
+        <div class="sobre">
+          <p class="mb-1">{{professor.sobre}}</p>
+        </div>
       </a>
     </ul>
   </div>
