--- a/src/app/components/entidades/professores/professores.component.html
+++ b/src/app/components/entidades/professores/professores.component.html
@@ -51,6 +51,7 @@
   
             <div class="infos">
               <h5 class="card-title">{{professor.nome}} {{professor.sobrenome}}</h5>
+              <p class="card-text">{{professor.resumo}}</p>
               <p class="card-text">{{professor.email}}</p>
             </div>
   
