--- a/src/app/components/entidades/professores/professores.component.css
+++ b/src/app/components/entidades/professores/professores.component.css
@@ -2,7 +2,7 @@
     margin: 20px 0;
 }
 .card{
-    margin: 20px 0;
+    margin:20px 0;
     color: black;
 }
 
@@ -17,11 +17,32 @@
 }
 
 img{
+    margin: 0;
     width: 150px;
     height: 150px;
     max-width: 150px;
     max-height: 150px;
     border-radius: 50%;
+    display: flex;
+    align-self: center;
+    margin: 10px 10px;
+}
+button.btn {
+    width: 10vw;
+
+    border: 1px solid black;
+
+    color: black;
+    font-weight: 500;
+}
+
+div button.btn:hover {
+    border: 1px solid #A435F0;
+    background-color: #A435F0;
+    color: #fff;
+}
+.col-md-4{
+    margin: 0;
 }
 
 .card-body{
