--- a/src/app/components/entidades/professores/professores.component.html
+++ b/src/app/components/entidades/professores/professores.component.html
@@ -42,7 +42,7 @@
       <div class="row no-gutters" >
   
         <div class="col-md-4">
-          <img src="{{professor.imagem}}" alt="...">
+          <img src="\assets\img\perfil-professores\foto-perfil.jpg" alt="...">
         </div>
   
         <div class="col-md-8">
@@ -52,6 +52,7 @@
             <div class="infos">
               <h5 class="card-title">{{professor.nome}} {{professor.sobrenome}}</h5>
               <p class="card-text">{{professor.email}}</p>
+              <p class="card-text">{{professor.resumo}}</p>
             </div>
   
             <div class="tools">
