--- a/src/app/components/entidades/professor-details/professor-details.component.css
+++ b/src/app/components/entidades/professor-details/professor-details.component.css
@@ -13,7 +13,15 @@ div.card{
     box-shadow: 0px 0px 2px #999;
 }
 
+.links{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
 .list-group{
+    margin: 20px 0;
     width: 100%;
 }
 
@@ -21,7 +29,7 @@ div.card{
     display: flex;
     flex-direction: row;
     gap: 20px;
-    align-items: center;
+    align-items: flex-start;
 }
 
 div button.btn {
@@ -52,5 +60,25 @@ div button.btn:hover {
 
 .rounded-circle{
     max-width: 200px;
+}
+
+.d-flex{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.list-group-item{
+    color: black;
+    font-weight: 500;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+h5{
+    font-size: 20px;
+    color: #A435F0;
+    font-weight: 500;
 }
 
