--- a/src/app/components/entidades/professor-details/professor-details.component.html
+++ b/src/app/components/entidades/professor-details/professor-details.component.html
@@ -1,7 +1,7 @@
 <section class="container">
   <div class="profile">
     <div class="links">
-      <img src="\assets\img\perfil-professores\foto-perfil.jpg" class="rounded-circle" alt="...">
+      <img src="{{professor.imagem}}" class="rounded-circle" alt="...">
       <button type="button" class="btn" (click)="goToLink('https://www.linkedin.com/')">Twitter</button>
       <button type="button" class="btn" (click)="goToLink('https://facebook.com/')">Facebook</button>
       <button type="button" class="btn" (click)="goToLink('https://www.instagram.com/')">Instagram</button>
