--- a/src/app/components/entidades/professores/professores.component.html
+++ b/src/app/components/entidades/professores/professores.component.html
@@ -42,7 +42,7 @@
       <div class="row no-gutters" >
   
         <div class="col-md-4">
-          <img src="\assets\img\perfil-professores\foto-perfil.jpg" alt="...">
+          <img src="{{professor.imagem}}" alt="...">
         </div>
   
         <div class="col-md-8">
