--- a/src/app/components/entidades/main/main.component.html
+++ b/src/app/components/entidades/main/main.component.html
@@ -1,3 +1,22 @@
+
+<img class="d-block w-100" src="\assets\img\banner.png" alt="First slide">
+
+<div class="container">
+  <section class="sub-container" id="first-item">
+    <div class="container">
+      <div class="banner">
+        <img src="assets\img\avr.png" alt="">
+      </div>
+      <div class="info">
+        <h3>Aprenda os principais frameworks web da atualidade</h3>
+        <p>We don’t make assumptions about the tech stacks you or your team prefers to build with. That’s why Ionic is engineered to integrate seamlessly with all best frontend frameworks, including Angular, React, Vue, or even no framework at all with vanilla JavaScript.</p>
+      </div>
+    </div>
+  </section>
+
+
+</div>
+
 <div class="container">
   <div class="banner">
     <img class="java-img" src="assets\img\javajpg.jpg" alt="">
