--- a/src/app/components/entidades/professores/professores.component.html
+++ b/src/app/components/entidades/professores/professores.component.html
@@ -20,7 +20,7 @@
         <div class="card-body">
 
           <div class="infos">
-            <h5 class="card-title">{{professorF.nome}} {{professorF.sobrenome}}</h5>
+            <h5 class="card-title" (click)="getProfessorById(professorF.id)" [routerLink]="['/professor-details']">{{professorF.nome}} {{professorF.sobrenome}}</h5>
             <p class="card-text">{{professorF.email}}</p>
           </div>
 
@@ -50,7 +50,7 @@
           <div class="card-body">
   
             <div class="infos">
-              <h5 class="card-title">{{professor.nome}} {{professor.sobrenome}}</h5>
+              <h5 class="card-title" (click)="getProfessorById(professor.id)" [routerLink]="['/professor-details']">{{professor.nome}} {{professor.sobrenome}}</h5>
               <p class="card-text">{{professor.email}}</p>
               <p class="card-text">{{professor.resumo}}</p>
             </div>
