alterando banner principal

--- a/src/app/components/entidades/main/main.component.html
+++ b/src/app/components/entidades/main/main.component.html
@@ -1,5 +1,5 @@
 
-<img class="d-block w-100" src="\assets\img\banner.png" alt="First slide">
+<img class="banner-home" src="\assets\img\banner.png" alt="First slide">
 
 <div class="container">
   <section class="sub-container" id="first-item">
