--- a/src/app/components/entidades/main/main.component.css
+++ b/src/app/components/entidades/main/main.component.css
@@ -12,10 +12,12 @@
     display: flex;
     flex-direction: column;
 }
-.d-block{
+.banner-home{
     margin: 30px 0;
-
+    width: 100%;
     border-radius: 10px;
+
+    box-shadow: 0px 0px 5px #999;
 }
 .info{
     padding-left: 50px;
