alterando layout banner home

--- a/src/app/components/entidades/main/main.component.html
+++ b/src/app/components/entidades/main/main.component.html
@@ -1,5 +1,12 @@
 
-<img class="banner-home" src="\assets\img\banner.png" alt="First slide">
+<div class="banner-home">
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">Encontre a opção certa</h5>
+      <p class="card-text">Cursos a partir de R$22,90 cada até hoje. Estude os temas que você quer, lecionados por especialistas reais.</p>
+    </div>
+  </div>
+</div>
 
 <div class="container">
   <section class="sub-container" id="first-item">
