--- a/src/app/components/entidades/main/main.component.css
+++ b/src/app/components/entidades/main/main.component.css
@@ -13,12 +13,34 @@
     flex-direction: column;
 }
 .banner-home{
+    padding-top: 30px;
     margin: 30px 0;
     width: 100%;
+    height: 70vh;
     border-radius: 10px;
 
-    box-shadow: 0px 0px 5px #999;
+    background-image: url("src/assets/img/banner.png");
+    background-position: center;
+    background-repeat: no-repeat;
 }
+
+.card{
+    margin: 30px;
+    
+    box-shadow: 0px 0px 2px #999;
+}
+
+.card-title{
+    font-size: 23px;
+    font-weight: 700;
+
+    cursor: pointer;
+}
+
+.card-title:hover{
+    color: #A435F0;
+}
+
 .info{
     padding-left: 50px;
     display: flex;
