Melhorias no carrinho

--- a/src/app/components/entidades/carrinho/carrinho.component.html
+++ b/src/app/components/entidades/carrinho/carrinho.component.html
@@ -1,1 +1,6 @@
-<p>carrinho works!</p>
+<div class="carrinho-img">
+    <img src="assets\img\empty-cartjpg.jpg" alt="">
+</div>
+<div class="carrinho-text">
+    <p>Estes são os seus cursos!</p>
+</div>
