--- a/src/app/components/entidades/carrinho/carrinho.component.html
+++ b/src/app/components/entidades/carrinho/carrinho.component.html
@@ -20,7 +20,7 @@
         <h5 class="card-title">{{cursoF.titulo}}</h5>
         <p class="card-text">{{cursoF.descricao}}</p>
         <p class="card-text">R$ {{cursoF.valor}}</p>
-        <button type="button" class="btn">Adicionar ao carrinho</button>
+        <button type="button" class="btn" (click)="removerCurso(cursoF)">Remover do carrinho</button>
       </div>
     </div>
   </div>
@@ -32,7 +32,7 @@
         <h5 class="card-title">{{curso.titulo}}</h5>
         <p class="card-text">{{curso.descricao}}</p>
         <p class="card-title">R$ {{curso.valor}}</p>
-        <button type="button" class="btn">Remover do carrinho</button>
+        <button type="button" class="btn" (click)="removerCurso(curso)">Remover do carrinho</button>
       </div>
     </div>
   </div>
