--- a/src/app/components/entidades/cursos/cursos.component.html
+++ b/src/app/components/entidades/cursos/cursos.component.html
@@ -24,7 +24,7 @@
         <div class="card-body">
           <h5 class="card-title">{{curso.titulo}}</h5>
           <p class="card-text">{{curso.descricao}}</p>
-          <p class="card-title">R$ {{curso.valor}}</p>
+          <p class="card-price">R$ {{curso.valor}}</p>
           <button type="button" class="btn" (click)="sessionCurso(curso)">Adicionar ao carrinho</button>
         </div>
       </div>
