--- a/src/app/components/entidades/professor-details/professor-details.component.html
+++ b/src/app/components/entidades/professor-details/professor-details.component.html
@@ -26,9 +26,10 @@
       <div class="card-body">
         <h5 class="card-title">{{curso.titulo}}</h5>
         <p class="card-text">{{curso.descricao}}</p>
+        <p class="card-price">R$ {{curso.valor}}</p>
         <div class="div-icons">
         </div>
-        <button type="button" class="btn">R$ {{curso.valor}}</button>
+        <button type="button" class="btn">Adicionar ao carrinho</button>
       </div>
     </div>
   </div>
