--- a/src/app/components/entidades/professor-details/professor-details.component.css
+++ b/src/app/components/entidades/professor-details/professor-details.component.css
@@ -34,7 +34,7 @@ div.card{
 }
 
 div button.btn {
-    width: 10vw;
+    width: 15vw;
 
     border: 1px solid black;
 
@@ -77,9 +77,22 @@ div button.btn:hover {
     gap: 20px;
 }
 
-h5{
+.list-group h5{
     font-size: 20px;
     color: #A435F0;
     font-weight: 500;
 }
 
+.cursos h5{
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.cursos h5:hover{
+    color:#A435F0;
+}
+
+.card-price{
+    font-weight: 600;
+}
