--- a/src/app/components/entidades/main/main.component.css
+++ b/src/app/components/entidades/main/main.component.css
@@ -5,12 +5,29 @@
     color: black;
     display: flex;
     flex-direction: row;
+    box-shadow: 0px 0px 2px #999;
+    padding: 30px;
 
+}
+
+.container-principal{
+    margin: 30px auto;
+    color: black;
+    display: flex;
+    flex-direction: row;
+}
+
+.container-center{
+    margin: 30px auto;
+    color: black;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .sub-container{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 .banner-home{
     padding-top: 30px;
