--- a/src/app/components/entidades/carrinho/carrinho.component.css
+++ b/src/app/components/entidades/carrinho/carrinho.component.css
@@ -8,10 +8,6 @@
     justify-content: center;
 }
 
-p {
-    font-weight: bolder;
-}
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap');
 
 .container{
@@ -51,7 +47,7 @@ div.card{
 }
 
 div button.btn {
-    width: 10vw;
+    width: 15vw;
 
     border: 1px solid black;
 
@@ -64,6 +60,21 @@ div button.btn:hover {
     background-color: #A435F0;
     color: #fff;
 }
+.card-title{
+    font-size: 20px;
+    font-weight: 500;
+    color: black;
+    cursor: pointer;
+
+}
+.card-title:hover{
+    color: #A435F0;
+
+}
 .card-text{
     height: 10vh;
 }
+.card-price{
+    font-weight: 600;
+}
+
