--- a/src/app/components/entidades/cursos/cursos.component.html
+++ b/src/app/components/entidades/cursos/cursos.component.html
@@ -22,7 +22,7 @@
       <div class="card" style="max-width: 18rem;" *ngFor="let curso of cursos">
         <img src="{{curso.imagem}}" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title" (click)="enviarIdCurso(curso)" >{{curso.titulo}}</h5>
+          <h5 class="card-title" (click)="enviarIdCurso(curso)" [routerLink]="['/curso-details']">{{curso.titulo}}</h5>
           <p class="card-text">{{curso.descricao}}</p>
           <p class="card-price">R$ {{curso.valor}}</p>
           <button type="button" class="btn" (click)="sessionCurso(curso)">Adicionar ao carrinho</button>
