--- a/src/app/components/entidades/curso-details/curso-details.component.html
+++ b/src/app/components/entidades/curso-details/curso-details.component.html
@@ -1,1 +1,11 @@
-<p>curso-details works!</p>
+<div class="cursos">
+    <div class="card" style="max-width: 18rem;">
+      <img src="{{curso.imagem}}" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">{{curso.titulo}}</h5>
+        <p class="card-text">{{curso.descricao}}</p>
+        <p class="card-price">R$ {{curso.valor}}</p>
+        <button type="button" class="btn" (click)="sessionCurso(curso)">Adicionar ao carrinho</button>
+      </div>
+    </div>
+  </div>
