Implementando componente de wish list e relacionando sua rota ao clique do ícone da wishlist na toolbar

--- a/src/app/components/layout/home/home.component.html
+++ b/src/app/components/layout/home/home.component.html
@@ -13,6 +13,7 @@
     </ul>
   </div>
   <div class="container-options">
+    <mat-icon [routerLink]="['/wishlist']" class="icon">favorite_border</mat-icon>
     <mat-icon [routerLink]="['/carrinho']" class="icon">shopping_cart</mat-icon>
     <mat-icon [routerLink]="['/']" class="icon" (click)="logoutUsuario()">logout</mat-icon>
   </div>
