--- a/src/app/components/entidades/cursos/cursos.component.css
+++ b/src/app/components/entidades/cursos/cursos.component.css
@@ -36,6 +36,14 @@ div.card{
     box-shadow: 0px 0px 2px #999;
 }
 
+div.controll{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
 div button.btn {
     width: 201px;
 
@@ -63,4 +71,13 @@ div button.btn:hover {
 }
 .card-price{
     font-weight: 600;
+}
+
+.icon{
+    color: black;
+    cursor: pointer;
+}
+
+.icon:hover{
+    color: #A435F0;
 }
