Trazendo da API o Usuario cujo token acabei de ter cadastrado, para eu poder criar uma Wishlist apartir desse Usuario

--- a/src/app/components/conta/formulario-usuario/formulario-usuario.component.html
+++ b/src/app/components/conta/formulario-usuario/formulario-usuario.component.html
@@ -1,5 +1,5 @@
 <article>
-    <img class="img" src="assets\img\udeyou-logo.png" alt="logo-deloitte">
+    <img class="img" src="assets\img\udeyou-logo.png" alt="logo-udeyou">
     <form>
         <label>
             Usuario:
