Implementado o método getWishlistByUsuario e trazendo o curso que quero adicionar à wish list para o contaUsuarioService

--- a/src/app/components/entidades/cursos/cursos.component.html
+++ b/src/app/components/entidades/cursos/cursos.component.html
@@ -15,7 +15,7 @@
           <p class="card-text">R$ {{cursoF.valor}}</p>
           <div class="controll">
             <button type="button" class="btn" (click)="sessionCurso(cursoF)">Adicionar ao carrinho</button>
-            <mat-icon class="icon" (click = "addWish(cursoF)")>favorite_border</mat-icon>
+            <mat-icon class="icon" (click) = "enviarCursoId(cursoF)">favorite_border</mat-icon>
           </div>
         </div>
       </div>
@@ -30,7 +30,7 @@
           <p class="card-price">R$ {{curso.valor}}</p>
           <div class="controll">
             <button type="button" class="btn" (click)="sessionCurso(curso)">Adicionar ao carrinho</button>
-            <mat-icon class="icon" (click) = addWish(curso)>favorite_border</mat-icon>
+            <mat-icon class="icon" (click) = enviarCursoId(curso)>favorite_border</mat-icon>
           </div>
         </div>
       </div>
