adicionando ao carrinho pelo professor details

--- a/src/app/components/entidades/professor-details/professor-details.component.html
+++ b/src/app/components/entidades/professor-details/professor-details.component.html
@@ -29,7 +29,7 @@
         <p class="card-price">R$ {{curso.valor}}</p>
         <div class="div-icons">
         </div>
-        <button type="button" class="btn">Adicionar ao carrinho</button>
+        <button type="button" class="btn" (click)="sessionCurso(curso)">Adicionar ao carrinho</button>
       </div>
     </div>
   </div>
