Exibindo os cursos da wishlist no html do component

--- a/src/app/components/entidades/wishlist/wishlist.component.html
+++ b/src/app/components/entidades/wishlist/wishlist.component.html
@@ -1,1 +1,5 @@
-<p>wishlist works!</p>
+<ul *ngFor="let curso of cursos">
+    <li>{{curso.titulo}}</li>
+    <li>{{curso.descricao}}</li>
+    <li>{{curso.valor}}</li>
+</ul>
