incluindo botões main

--- a/src/app/components/entidades/main/main.component.html
+++ b/src/app/components/entidades/main/main.component.html
@@ -3,7 +3,9 @@
     <div class="card-body">
       <h5 class="card-title">Encontre a opção certa</h5>
       <p class="card-text">Cursos a partir de R$22,90 cada até hoje. Estude os temas que você quer, lecionados por
-        especialistas reais.</p>
+        especialistas reais.
+      </p>
+        <button type="button" class="btn">Encontre seu curso</button>
     </div>
   </div>
 </div>
@@ -18,6 +20,8 @@
       <p>We don’t make assumptions about the tech stacks you or your team prefers to build with. That’s why Ionic is
         engineered to integrate seamlessly with all best frontend frameworks, including Angular, React, Vue, or even
         no framework at all with vanilla JavaScript.</p>
+
+        <button type="button" class="btn">Saiba mais</button>
     </div>
   </section>
 </div>
@@ -28,6 +32,8 @@
       <p>É uma linguagem de programação orientada a objetos desenvolvida na década de 90 por uma equipe de programadores
         chefiada por James Gosling, na empresa Sun Microsystems. Em 2008 o Java foi adquirido pela empresa Oracle
         Corporation</p>
+
+        <button type="button" class="btn">Documentação</button>
     </div>
     <div class="banner">
       <img src="assets\img\javajpg.jpg" alt="">
@@ -53,6 +59,7 @@
       <p>É uma linguagem de programação, multiparadigma, de tipagem forte, desenvolvida pela Microsoft como parte
         da plataforma .NET. A sua sintaxe orientada a objetos foi baseada no C++ mas inclui muitas influências de outras
         linguagens de programação, como Object Pascal</p>
+        <button type="button" class="btn">Page</button>
     </div>
   </section>
 </div>
@@ -71,6 +78,7 @@
       <h3>Vue JS</h3>
       <p>É um framework JavaScript de código-aberto, focado no desenvolvimento de interfaces de usuário e
         aplicativos de página única</p>
+        <button type="button" class="btn">Sobre</button>
     </div>
     <div class="banner">
       <img src="assets\img\learnvue.png" alt="">
@@ -97,6 +105,7 @@
         pela Equipe Angular do Google e por uma comunidade de indivíduos e corporações. Angular é uma reescrita completa
         do
         AngularJS, feito pela mesma equipe que o construiu</p>
+        <button type="button" class="btn">Documentação</button>
     </div>
   </section>
 </div>
@@ -116,6 +125,7 @@
       <p>É um SDK de código aberto completo para desenvolvimento de aplicativo móvel híbrido criado por Max
         Lynch, Ben Sperry e Adam Bradley da Drifty Co. em 2013. A versão original foi lançada em 2013 e construída sobre
         AngularJS e Apache Cordova</p>
+        <button type="button" class="btn">Saiba mais</button>
     </div>
     <div class="banner">
       <img src="assets\img\1200px-Ionic-logo-landscape.svg.png" alt="">
