--- a/src/app/components/entidades/main/main.component.css
+++ b/src/app/components/entidades/main/main.component.css
@@ -82,3 +82,17 @@
 img {
     width: 500px;
 }
+
+div button.btn {
+    width: 201px;
+
+    border: 1px solid black;
+    background-color: #111;
+
+    color: #fff;
+    font-weight: 500;
+}
+
+div button.btn:hover{
+    background-color: #000;
+}
