--- a/src/app/components/entidades/formulario-cursos/formulario-cursos.component.css
+++ b/src/app/components/entidades/formulario-cursos/formulario-cursos.component.css
@@ -7,7 +7,7 @@
     left: 0;
     height: 100vh;
     width: 100vw;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0,0,0, #fff);
     backdrop-filter: blur(6px);
     z-index: 2;
     display: flex;
@@ -16,65 +16,101 @@
     transition: opacity 3s linear;
 }
 
-.form {
-    border: 4px solid #333;
-    background-color: #333;
+form {
+    color: black;
+    width: 306px;
+
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
     border-radius: 5px;
-    padding: 0px 30px;
-    padding-bottom: 30px;
+    padding: 30px;
+    box-shadow: 0px 0px 10px #999;
 }
 
-.form-control{
-    background-color: #999;
-    border: 2px solid #222;
+form input{
+    color: #000;
+    margin: 5px auto;
+    display: block;
+    width: 100%;
+    height: 35px;
+
     
+    border-radius: 7px;
+    background-color: #fff;
+    border: 2px solid #222;
 }
-.form-control::placeholder{
+
+form input::placeholder{
+    padding: 5px;
     color: #fff;
-    opacity: 0.6;
 }
 
-.form-control:focus {
-    border: 1px solid #43B02A;
-    box-shadow: 1px 1px 3px #43B02A;
+form input:focus{
+    outline-style: solid;
+    outline-color: #A435F0;
+    outline-width: 2px;
+    border-radius: 7px;
+
+    border: 1px solid #A435F0;
+    box-shadow: 1px 1px 3px #A435F0;
 }
 
-.control{
+form div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+input {
+    display: inline-block;
+    margin: 10px 0;
+}
+
+form .controles{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 0;
+}
+
+form .controles .btn{
+    width: 10vw;
+    border: 1px solid black;
+    color: black;
+    font-weight: 500;
+}
+form .controles .btn:hover{
+    border: 1px solid #A435F0;
+    background-color: #A435F0;
+    color: #fff;
+}
+
+.link{
+    color: #A435F0;
+    cursor: pointer;
+    font-weight: 500;
+    margin: 0;
+
+}
+.link:hover{
+    font-weight: 600;
+}
+
+span {
+    cursor: pointer;
+    margin-left: 50px;
+}
+
+.campos-vazios {
+    border: 1px solid red;
+}
+
+P {
+    cursor: pointer;
+}
+
+form .controles{
     display: flex;
     justify-content: space-between;
-    align-items: center;
-}
-
-.botao{
-    width: 70px;
-    height: 35px;
-    border-radius: 5px;
-    background-color: #43B02A;
-    border: 3px solid #43B02A;
-    color: #fff;
-    font-size: 15px;
-    font-weight: 700; 
-}
-
-.botao:hover {
-    border-radius: 5px;
-    background-color: #2c8019;
-    border: 3px solid #2c8019;
-    color: #fff
-}
-
-.voltar{
-    cursor: pointer;
-    color: #fff;
-    font-weight: 700;
-}
-
-.voltar:hover{
-    color: #43B02A;
-    font-weight: 800;
-}
-
-.label {
-    margin-top: 15px;
-    color: #fff;
+    margin-bottom: 0;
 }
