--- a/src/app/components/entidades/formulario-cursos/formulario-cursos.component.html
+++ b/src/app/components/entidades/formulario-cursos/formulario-cursos.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form class="form" (submit)="envioFormulario()">
+    <!-- <form class="form" (submit)="envioFormulario()">
       <div class="form-group">
         <label class="label" for="exampleInputEmail1">Titulo</label>
         <input type="text" name="titulo" class="form-control" id="titulo" placeholder="Entre titulo" [(ngModel)]="titulo">
@@ -15,6 +15,25 @@
         <p class="voltar" routerLink="['/cursos']">Voltar</p>
         <button type="submit" class="botao">Enviar</button>
       </div>
-    </form>
+    </form> -->
+
+    <form (submit)="envioFormulario()">
+      <label>
+          Titulo:
+          <input type="text" name="titulo" id="titulo" placeholder="" [(ngModel)]="titulo">
+      </label>
+      <label>
+          Descricao:
+          <input type="text" name="descricao" id="descricao" placeholder="" [(ngModel)]="descricao">
+      </label>
+      <label>
+          Valor:
+          <input type="number" name="valor" id="valor" placeholder="" [(ngModel)]="valor">
+      </label>
+      <div class="controles">      
+          <p class="link" [routerLink]="['/cursos']">Voltar</p>
+          <button type="submit" class="btn">Salvar</button>
+      </div>
+  </form>
   </div>
   
