--- a/src/app/components/entidades/formulario-cursos-update/formulario-cursos-update.component.html
+++ b/src/app/components/entidades/formulario-cursos-update/formulario-cursos-update.component.html
@@ -1,20 +1,22 @@
 <div class="container">
-    <form class="form" (submit)="envioFormulario()">
-      <div class="form-group">
-        <label class="label" for="exampleInputEmail1">Novo Titulo</label>
-        <input type="text" name="novoTitulo" class="form-control" id="titulo" placeholder="Entre titulo" [(ngModel)]="novoTitulo">
-        
-        <label class="label" for="exampleInputEmail1">Nova Descricao</label>
-        <input type="text" name="novaDescricao" class="form-control" id="descricao" placeholder="Entre seu descricao" [(ngModel)]="novaDescricao">
-        
-        <label class="label" for="exampleInputEmail1">Novo Valor</label>
-        <input type="text" name="novoValor" class="form-control" id="email" placeholder="Entre valor" [(ngModel)]="novoValor">
+    <form (submit)="envioFormulario()">
+      <h5>Alterar curso</h5>
+      <label>
+          Titulo:
+          <input type="text" name="novoTitulo" id="titulo" placeholder="" [(ngModel)]="novoTitulo">
+      </label>
+      <label>
+          Descricao:
+          <input type="text" name="novaDescricao" id="descricao" placeholder="" [(ngModel)]="novaDescricao">
+      </label>
+      <label>
+          Valor:
+          <input type="number" name="novoValor" id="valor" placeholder="" [(ngModel)]="novoValor">
+      </label>
+      <div class="controles">      
+          <p class="link" [routerLink]="['/cursos']">Voltar</p>
+          <button type="submit" class="btn">Salvar</button>
       </div>
-      
-      <div class="control">
-        <p class="voltar" [routerLink]="['/servicos']">Voltar</p>
-        <button type="submit" class="botao">Enviar</button>
-      </div>
-    </form>
+  </form>
   </div>
   
