--- a/src/app/components/entidades/formulario-cursos/formulario-cursos.component.html
+++ b/src/app/components/entidades/formulario-cursos/formulario-cursos.component.html
@@ -1,23 +1,6 @@
 <div class="container">
-    <!-- <form class="form" (submit)="envioFormulario()">
-      <div class="form-group">
-        <label class="label" for="exampleInputEmail1">Titulo</label>
-        <input type="text" name="titulo" class="form-control" id="titulo" placeholder="Entre titulo" [(ngModel)]="titulo">
-        
-        <label class="label" for="exampleInputEmail1">Descricao</label>
-        <input type="text" name="descricao" class="form-control" id="descricao" placeholder="Entre seu descricao" [(ngModel)]="descricao">
-        
-        <label class="label" for="exampleInputEmail1">Valor</label>
-        <input type="text" name="valor" class="form-control" id="valor" placeholder="Entre valor" [(ngModel)] = "valor">
-      </div>
-      
-      <div class="control">
-        <p class="voltar" routerLink="['/cursos']">Voltar</p>
-        <button type="submit" class="botao">Enviar</button>
-      </div>
-    </form> -->
-
     <form (submit)="envioFormulario()">
+      <h5>Adicionar curso</h5>
       <label>
           Titulo:
           <input type="text" name="titulo" id="titulo" placeholder="" [(ngModel)]="titulo">
