Adicionado o css geral da wishlist

--- a/src/app/components/entidades/wishlist/wishlist.component.html
+++ b/src/app/components/entidades/wishlist/wishlist.component.html
@@ -1,3 +1,9 @@
+<div class="sub-header">
+  <div class="my-learning">
+    Meu aprendizado
+  </div>
+</div>
+
 <div class="container">
     <div class="input-group">
       <input class="form-control" type="search" aria-label="Search" #inputPesquisa id="input-pesquisa"  (input)="pesquisar(inputPesquisa.value)" type="text" placeholder="Pesquise em sua lista de desejos...">
