--- a/src/app/components/entidades/curso-details/curso-details.component.html
+++ b/src/app/components/entidades/curso-details/curso-details.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="cursos">
     <div class="card" style="max-width: 18rem;">
       <img src="{{curso.imagem}}" class="card-img-top" alt="...">
@@ -9,3 +10,4 @@
       </div>
     </div>
   </div>
+</div>
