--- a/src/app/components/entidades/wishlist/wishlist.component.css
+++ b/src/app/components/entidades/wishlist/wishlist.component.css
@@ -81,3 +81,20 @@ div button.btn:hover {
 .icon:hover{
     color: #A435F0;
 }
+
+.sub-header {
+    margin-top: 20px;
+    background-color: #1C1D1F;
+    color: #FFFFFF;
+    height: 200px;
+    font-family: 'Montserrat';
+    font-size: 40px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.my-learning {
+
+}
