Implementada rota do botão Encontre seu curso para o CursoComponent

--- a/src/app/components/entidades/main/main.component.html
+++ b/src/app/components/entidades/main/main.component.html
@@ -5,7 +5,7 @@
       <p class="card-text">Cursos a partir de R$22,90 cada até hoje. Estude os temas que você quer, lecionados por
         especialistas reais.
       </p>
-        <button type="button" class="btn">Encontre seu curso</button>
+        <button type="button" class="btn" [routerLink]="['/cursos']">Encontre seu curso</button>
     </div>
   </div>
 </div>
