--- a/src/app/components/entidades/curso-details/curso-details.component.css
+++ b/src/app/components/entidades/curso-details/curso-details.component.css
@@ -14,7 +14,7 @@ div.card img{
 }
 
 div .input-group{
-    width: 450px;
+    width: 45vw;
     display: flex;
     align-self: flex-start;
     margin-top: 20px;
@@ -36,16 +36,8 @@ div.card{
     box-shadow: 0px 0px 2px #999;
 }
 
-div.controll{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
 div button.btn {
-    width: 201px;
+    width: 15vw;
 
     border: 1px solid black;
 
@@ -73,11 +65,3 @@ div button.btn:hover {
     font-weight: 600;
 }
 
-.icon{
-    color: black;
-    cursor: pointer;
-}
-
-.icon:hover{
-    color: #A435F0;
-}
