--- a/src/app/components/entidades/professor-details/professor-details.component.css
+++ b/src/app/components/entidades/professor-details/professor-details.component.css
@@ -13,19 +13,28 @@ div.card{
     box-shadow: 0px 0px 2px #999;
 }
 
+.links{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
 .list-group{
+    margin: 20px 0;
     width: 100%;
+    height: 100%;
 }
 
 .profile{
     display: flex;
     flex-direction: row;
     gap: 20px;
-    align-items: center;
+    align-items: flex-start;
 }
 
 div button.btn {
-    width: 10vw;
+    width: 201px;
 
     border: 1px solid black;
 
@@ -54,3 +63,36 @@ div button.btn:hover {
     max-width: 200px;
 }
 
+.d-flex{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.list-group-item{
+    color: black;
+    font-weight: 500;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.list-group h5{
+    font-size: 20px;
+    color: #A435F0;
+    font-weight: 500;
+}
+
+.cursos h5{
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.cursos h5:hover{
+    color:#A435F0;
+}
+
+.card-price{
+    font-weight: 600;
+}
