--- a/src/app/components/entidades/carrinho/carrinho.component.html
+++ b/src/app/components/entidades/carrinho/carrinho.component.html
@@ -4,6 +4,9 @@
 <div class="carrinho-text">
     <p>Estes são os seus cursos!</p>
 </div>
+<div class="continuar-comprando">
+  <button type="button" class="btn" [routerLink]="['/cursos']">Continuar comprando</button>
+</div>
 
 <div class="container">
     <div class="input-group">
