Melhoria no layout do curso details

--- a/src/app/components/entidades/carrinho/carrinho.component.css
+++ b/src/app/components/entidades/carrinho/carrinho.component.css
@@ -100,7 +100,7 @@ div button.btn:hover {
 
 .input-pedido {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .pedido button {
