--- a/src/app/components/entidades/curso-details/curso-details.component.css
+++ b/src/app/components/entidades/curso-details/curso-details.component.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap');
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+}
+
 .container{
     margin: 0 auto;
     margin-bottom: 100px;
@@ -51,17 +56,34 @@ div button.btn:hover {
     color: #fff;
 }
 .card-title{
-    font-size: 20px;
+    font-size: 40px;
     font-weight: 500;
     cursor: pointer;
+    color: white;
 }
 .card-title:hover{
     color: #A435F0;
 }
 .card-text{
     height: 10vh;
+    color: white;
 }
 .card-price{
     font-weight: 600;
 }
+.main {
+    background-color: #1C1D1F;
+    width: 100%;
+    height: 200px;
+    margin: 20px;
+    padding: 20px;
+
+    display: flex;
+}
+
+.curso-info {
+    margin: 30px;
+    width: 500px;
+}
+
 
