Implementando valor total do pedido no carrinho

--- a/src/app/components/entidades/carrinho/carrinho.component.css
+++ b/src/app/components/entidades/carrinho/carrinho.component.css
@@ -85,6 +85,7 @@ div button.btn:hover {
 
     color: black;
     font-weight: 500;
+    margin-bottom: 10px;
 }
 
 .continuar-comprando {
@@ -105,4 +106,18 @@ div button.btn:hover {
 
 .pedido button {
     margin-top: 20px;
+}
+
+.total-pedido {
+    margin-top: 10px;
+
+    font-size: 30px;
+    font-weight: bolder;
+}
+
+.pedido {
+    width: 240px;
+    height: 140px;
+    border: 1px solid black;
+    padding: 20px;
 }
